# KrTxGNN

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: indexnow.yml  news-monitor.yml  pages.yml
config/: fields.yaml
data/news/: keywords.json  korea_news.json  matched_news.json  synonyms.json
data/processed/: drug_mapping.csv  repurposing_candidates.csv
docs/: CNAME  Gemfile  _config.yml  index.md  robots.txt
docs/_drugs/: abacavir_sulfate.md  abatacept.md  abciximab.md  abemaciclib.md  acamprosate_calcium.md  acarbose.md  aceclofenac.md  acetaminophen.md  acetazolamide.md  acetylcysteine.md  acipimox.md  acyclovir.md  adalimumab.md  adapalene.md  adefovir_dipivoxil.md  adenosine.md  aflibercept.md  agalsidase_beta.md  agomelatine.md  albendazole.md  albutrepenonacog_alfa.md  alcaftadine.md  aldesleukin.md  alemtuzumab.md  alfacalcidol.md  alfentanil_hydrochloride.md  alfuzosin_hydrochloride.md  alirocumab.md  alitretinoin.md  allantoin.md  allopurinol.md  alpelisib.md  alpha-tocopherol.md  alpha-tocopherol_acetate.md  alprazolam.md  alprostadil.md  alteplase.md  alverine_citrate.md  (+782 more)
prompts/: pharmacist_v5_storytelling.md
scripts/: batch_collect_bundles.py  batch_generate_reports.py  download_mfds_data.py  drug_list.json  generate_drug_pages.py  generate_fhir_resources.py  generate_news_keywords.py  integrate_predictions.py  process_fda_data.py  process_news.py  run_kg_prediction.py  scrape_nedrug.py
tests/: __init__.py  test_disease_mapper.py  test_drugbank_mapper.py  test_normalizer.py  test_repurposing.py
(+4444 files in other folders)
